2002-01-21 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Update support for parameter getting/setting.

2002-01-21 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Add support for slab matrix cache.
	* generalslab.cpp: Ditto.
	* slabmatrixcache.h: New file.
	* slabmatrixcache.cpp: New file.
	* makefile: Update.

2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Fix signs and normalisation.

2001-11-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Account for non-orthogonal modes.

2001-11-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Fix normalisation.

2001-11-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Replace wrong kz by kz0.

2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Virtualise kz.
	
2001-10-25  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * generalslab.cpp: Add overlap integrals for off-axis incidence.
	